--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <!-- Bootstrap css -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
-    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
 
-    <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/v3.12.0/mapbox-gl.css" />
-    <link rel="stylesheet" href="css/custom.css"/>
+    <link rel="stylesheet" href="lib/mapbox/mapbox-gl.css" />
+    <link rel="stylesheet" href="css/custom.css" />
 
     <!-- External scripts -->
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src='https://api.mapbox.com/mapbox-gl-js/v3.12.0/mapbox-gl.js'></script>
+    <script src='lib/mapbox/mapbox-gl.js'></script>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
