--- a/index.html
+++ b/index.html
@@ -32,9 +32,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
-    <!-- Custom JavaScript -->
-        <!-- TODO: details -->
-
   </head>
   <body>
     <nav class="navbar navbar-light">
@@ -47,6 +44,10 @@
 
     </nav>
     <main role="main" class="container-fluid">
+        <div id="area-info">
+            <div><span class="me-2">Name:</span><strong id="name"></strong></div>
+            <div><span class="me-2">Total Units:</span><strong id="units"></strong></div>
+        </div>
         <div id="map"></div>
     </main>
 
