add meta description

--- a/index.html
+++ b/index.html
@@ -5,14 +5,8 @@
 
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta content='TODO: details' name='description'>
+    <meta content="See the share of Cook County’s total housing units by community area and municipality that are in single family homes, condominiums, two-to-four unit buildings, buildings with five to 49 units, and buildings with 50 units or more." name='description'>
     <meta content='Housing Stock - Institute for Housing Studies - DePaul University' name='author'>
-
-    <!-- Facebook metadata -->
-        <!-- TODO: details -->
-
-    <!-- Twitter metadata -->
-        <!-- TODO: details -->
 
     <!-- Styles -->
     <!-- Bootstrap css -->
