--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang='en'>
   <head>
-    <title>Housing Stock - Institute for Housing Studies - DePaul University</title>
+    <title>Composition of Cook County’s Housing Market - Institute for Housing Studies - DePaul University</title>
 
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta content="See the share of Cook County’s total housing units by community area and municipality that are in single family homes, condominiums, two-to-four unit buildings, buildings with five to 49 units, and buildings with 50 units or more." name='description'>
-    <meta content='Housing Stock - Institute for Housing Studies - DePaul University' name='author'>
+    <meta content='Composition of Cook County’s Housing Market - Institute for Housing Studies - DePaul University' name='author'>
 
     <!-- Styles -->
     <!-- Bootstrap css -->
@@ -30,7 +30,7 @@
   <body>
     <nav class="navbar navbar-light">
         <div class="container">
-            <h1>IHS Housing Stock Map</h1>
+            <h1 class="me-3">Composition of Cook County’s Housing Market</h1>
             <a class="navbar-brand" href="http://www.housingstudies.org/">
                 <img src="images/ihs-logo.png" id="logo" alt="Institue for Housing Studies at DePaul University">
             </a>
