--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
   <body>
     <nav class="navbar navbar-light">
         <div class="container">
-            <h1 class="me-3">Composition of Cook County’s Housing Market</h1>
+            <h1 class="me-3">
+                <div>Composition of Cook County’s </div>
+                <div>Housing Market</div>
+            </h1>
             <a class="navbar-brand" href="http://www.housingstudies.org/">
                 <img src="images/ihs-logo.png" id="logo" alt="Institue for Housing Studies at DePaul University">
             </a>
@@ -43,7 +46,7 @@
     <main role="main" class="container-fluid">
         <div id="area-info" class="p-2 mb-3">
             <p class="mb-1" id="instructions">
-                <i class="fa fa-search me-1" aria-hidden="true"></i> To view details for an area, search for one by name or select one directly from the map.
+                <i class="fa fa-search me-1" aria-hidden="true"></i> To view details for an area, search by name or select one directly from the map.
             </p>
             <select id="search" class="mb-2" data-placeholder="Search an area by name..."></select>
             <hr aria-hidden="true">
