--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </head>
   <body>
     <nav class="navbar navbar-light">
-        <div class="container">
+        <div class="container-fluid">
             <h1 class="me-3">
                 <div>Composition of Cook County’s </div>
                 <div>Housing Market</div>
@@ -44,14 +44,24 @@
     </nav>
 
     <main role="main" class="container-fluid">
-        <div id="area-info" class="p-2 mb-3">
-            <p class="mb-1" id="instructions">
-                <i class="fa fa-search me-1" aria-hidden="true"></i> To view details for an area, search by name or select one directly from the map.
-            </p>
-            <select id="search" class="mb-2" data-placeholder="Search an area by name..."></select>
-            <hr aria-hidden="true">
-            <div id="info-display">
-                <div><span class="me-2">Hovered Area:</span><strong id="name"></strong></div>
+        <div class="row mb-3">
+            <div class="area-info col-sm-6 p-2 left">
+                <p class="mb-1">
+                    <i class="fa fa-search me-1" aria-hidden="true"></i>
+                    Search for an area by name
+                    <span class="d-sm-none">or select one directly from the map</span>
+                    to view details.
+                </p>
+                <select id="search" class="mb-2" data-placeholder="Search an area by name..."></select>
+            </div>
+            <div class="area-info d-none d-sm-block col-6 p-2 right">
+                <p class="mb-1">
+                    <i class="fa fa-hand-pointer-o me-1" aria-hidden="true"></i> Select an area directly from the map to view details.
+                </p>
+                <div id="info-display" class="my-2">
+                    <div>Hovered Area:</div>
+                    <p><strong id="name"></strong></p>
+                </div>
             </div>
         </div>
         <div id="map"></div>
